--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Blog
   <ul class="posts">
     <li><span>Sep 2010</span> <a href="http://speakerrate.com/talks/4590-marklogic-and-the-universal-index">NoSQL Frankfurt Presentation</a></li>
     <li><span>May 2010</span> <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">Getting Started with MarkLogic Server - Extending Application Builder</a></li>
-    <li><span>Oct 2009</span> <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">Build a pureXML and JSON application, Part 1: Store and query JSON with DB2 pureXML</a></li>
+    <li><span>Oct 2009</span> <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">Build a pureXML and JSON application: Store and query JSON with DB2</a></li>
     <li><span>Dec 2007</span> <a href="http://www-01.ibm.com/software/data/db2/express/students_amb.html#6">Featured as IBM DB2 Student Ambassador</a></li>
   </ul>
 </div>
