--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Blog
       <li><span>{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>  
-  <h1>Articles, Talks, Etc:</h1>
+  <h1>Articles, Talks, Etc</h1>
   <ul class="posts">
     <li><span>Sep 2010</span> <a href="http://speakerrate.com/talks/4590-marklogic-and-the-universal-index">NoSQL Frankfurt Presentation</a></li>
     <li><span>May 2010</span> <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">Getting Started with MarkLogic Server - Extending Application Builder</a></li>
