--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ title: Blog
   </ul>  
   <h1>Articles, Talks, Etc</h1>
   <ul class="posts">
+    <li><span>Jun 2011</span> <a href="http://opensourcebridge.org/proposals/524">No More Joins</a></li>
+    <li><span>Jun 2011</span> <a href="http://www.berlinbuzzwords.de/content/program">Transactions at the PB Scale with MarkLogic Server</a></li>
+    <li><span>Apr 2011</span> <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule">Templating with Mustache</a></li>
+    <li><span>Apr 2011</span> <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule">MarkLogic in a Nut-shell</a></li>
+    <li><span>Apr 2011</span> <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule">Build an App in 15 minutes with App Builder</a></li>
+    <li><span>Apr 2011</span> <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule">MarkLogic URL rewrite library</a></li>
+    <li><span>Apr 2011</span> <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule">Lightweight Binding of HTML Forms to XML</a></li>
     <li><span>Sep 2010</span> <a href="http://speakerrate.com/talks/4590-marklogic-and-the-universal-index">NoSQL Frankfurt Presentation</a></li>
     <li><span>May 2010</span> <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">Getting Started with MarkLogic Server - Extending Application Builder</a></li>
     <li><span>Oct 2009</span> <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">Build a pureXML and JSON application: Store and query JSON with DB2</a></li>
