--- a/index.html
+++ b/index.html
@@ -14,45 +14,54 @@ title: Welcome!
     <li>
       <a href="http://opensourcebridge.org/sessions/524">
         No More Joins
-      </a>, <span> Open Source Bridge</span>, <span>Portland</span>,
+      </a>, <span>Open Source Bridge</span>, <span>Portland</span>,
       <span>June 2011</span>
     </li>
     <li>
       <a href="http://berlinbuzzwords.de/content/acid-transactions-pb-scale-marklogic-server">
         Transactions at the PB Scale with MarkLogic Server, Berlin Buzzwords, Berlin
-      </a>, <span>June 2011</span> 
+      </a>, <span>Berlin Buzzwords</span>, <span>Berlin</span>,
+        <span>June 2011</span>
     </li>
     <li>
-      <a href="http://developer.marklogic.com">
+      <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
         Templating with Mustache, MarkLogic User Conference, San Francisco
-      </a>, <span>April 2011</span></li>
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+    </li>
     <li>
-      <a href="http://developer.marklogic.com">
+      <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
         MarkLogic in a Nut-shell, MarkLogic User Conference, San Francisco
-      </a>, <span>April 2011</span>
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
-      <a href="http://developer.marklogic.com">
+      <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
         Build an App in 15 minutes with App Builder, MarkLogic User Conference, San Francisco
-      </a>, <span>April 2011</span>
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
-      <a href="http://developer.marklogic.com">
+      <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
         MarkLogic URL rewrite library, MarkLogic User Conference, San Francisco
-      </a>, <span>April 2011</span>
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li> 
-      <a href="http://developer.marklogic.com">
+      <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
         Lightweight Binding of HTML Forms to XML, MarkLogic User Conference, San Francisco
-      </a>, <span>April 2011</span>
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://speakerrate.com/talks/4590-marklogic-and-the-universal-index">
-        MarkLogic and the Universal Index, NoSQL Frankfurt, Frankfurt
-      </a>, <span>Sep 2010</span>
+        MarkLogic and the Universal Index
+      </a>, <span>NoSQL Frankfurt</span>, <span>Frankfurt</span>, <span>September 2010</span>
     </li>
-    <li><span>May 2010</span> <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">Getting Started with MarkLogic Server - Extending Application Builder</a></li>
-    <li><span>Oct 2009</span> <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">Build a pureXML and JSON application: Store and query JSON with DB2</a></li>
-    <li><span>Dec 2007</span> <a href="http://www-01.ibm.com/software/data/db2/express/students_amb.html#6">Featured as IBM DB2 Student Ambassador</a></li>
+    <li>
+      <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">
+        Getting Started with MarkLogic Server - Extending Application Builder
+      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>May 2010</span>
+    </li>
+    <li>
+      <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">
+        Build a pureXML and JSON application: Store and query JSON with DB2
+      </a>, <span>October 2009</span>
+    </li>
   </ul>
 </div>
