fixed some duplicate places names

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@ title: Welcome!
     </li>
     <li>
       <a href="http://berlinbuzzwords.de/content/acid-transactions-pb-scale-marklogic-server">
-        Transactions at the PB Scale with MarkLogic Server, Berlin Buzzwords, Berlin
+        Transactions at the PB Scale with MarkLogic Server
       </a>, <span>Berlin Buzzwords</span>, <span>Berlin</span>,
         <span>June 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Templating with Mustache, MarkLogic User Conference, San Francisco
+        Templating with Mustache
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        MarkLogic in a Nut-shell, MarkLogic User Conference, San Francisco
+        MarkLogic in a Nut-shell
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Build an App in 15 minutes with App Builder, MarkLogic User Conference, San Francisco
+        Build an App in 15 minutes with App Builder
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        MarkLogic URL rewrite library, MarkLogic User Conference, San Francisco
+        MarkLogic URL rewrite library
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li> 
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Lightweight Binding of HTML Forms to XML, MarkLogic User Conference, San Francisco
+        Lightweight Binding of HTML Forms to XML
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
@@ -55,7 +55,7 @@ title: Welcome!
     </li>
     <li>
       <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">
-        Getting Started with MarkLogic Server - Extending Application Builder
+        Getting Started with MarkLogic Server
       </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>May 2010</span>
     </li>
     <li>
