--- a/index.html
+++ b/index.html
@@ -13,55 +13,46 @@ title: Welcome!
   <ul class="posts">
     <li>
       <a href="http://opensourcebridge.org/sessions/524">
-        No More Joins
-      </a>, <span>Open Source Bridge</span>, <span>Portland</span>,
+        No More Joins</a>, <span>Open Source Bridge</span>, <span>Portland</span>,
       <span>June 2011</span>
     </li>
     <li>
       <a href="http://berlinbuzzwords.de/content/acid-transactions-pb-scale-marklogic-server">
-        Transactions at the PB Scale with MarkLogic Server
-      </a>, <span>Berlin Buzzwords</span>, <span>Berlin</span>,
+        Transactions at the PB Scale with MarkLogic Server</a>, <span>Berlin Buzzwords</span>, <span>Berlin</span>,
         <span>June 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Templating with Mustache
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+        Templating with Mustache</a>, 
+      <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        MarkLogic in a Nut-shell
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+        MarkLogic in a Nut-shell</a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Build an App in 15 minutes with App Builder
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+        Build an App in 15 minutes with App Builder</a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        MarkLogic URL rewrite library
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+        MarkLogic URL rewrite library</a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li> 
       <a href="http://developer.marklogic.com/events/mluc11-labs-and-lounge-schedule#talks">
-        Lightweight Binding of HTML Forms to XML
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
+        Lightweight Binding of HTML Forms to XML</a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>April 2011</span>
     </li>
     <li>
       <a href="http://speakerrate.com/talks/4590-marklogic-and-the-universal-index">
-        MarkLogic and the Universal Index
-      </a>, <span>NoSQL Frankfurt</span>, <span>Frankfurt</span>, <span>September 2010</span>
+        MarkLogic and the Universal Index</a>, <span>NoSQL Frankfurt</span>, <span>Frankfurt</span>, <span>September 2010</span>
     </li>
     <li>
       <a href="http://speakerrate.com/talks/3148-getting-started-with-marklogic-server-extending-application-builder">
-        Getting Started with MarkLogic Server
-      </a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>May 2010</span>
+        Getting Started with MarkLogic Server</a>, <span>MarkLogic User Conference</span>, <span>San Francisco</span>, <span>May 2010</span>
     </li>
     <li>
       <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">
-        Build a pureXML and JSON application: Store and query JSON with DB2
-      </a>, <span>October 2009</span>
+        Build a pureXML and JSON application: Store and query JSON with DB2</a>, <span>October 2009</span>
     </li>
   </ul>
 </div>
