fixed some duplicate places names

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Welcome!
     </li>
     <li>
       <a href="http://www.ibm.com/developerworks/xml/library/x-db2JSONpt1/index.html">
-        Build a pureXML and JSON application: Store and query JSON with DB2</a>, <span>October 2009</span>
+        Build a pureXML and JSON application: Store and query JSON with DB2</a>, <span>IBM Developer Works</span>, <span>October 2009</span>
     </li>
   </ul>
 </div>
