--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 title: Welcome!
 ---
 <div id="home">
-  <h1>Posts</h1>
+  <h1>Writings</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><a href="{{ post.url }}">{{ post.title }}</a>, <span>{{ post.date | date_to_long_string }}</span></li>
     {% endfor %}
   </ul>  
-  <h1>Articles, Talks, Etc...</h1>
+  <h1>Talks, Articles, Etc...</h1>
   <ul class="posts">
     <li>
       <a href="http://opensourcebridge.org/sessions/524">
