trying @regedor aboutme hack

--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD xhtml 1.0 frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd"> 
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
