added slides for berlin buzzwords

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Welcome!
       <span>June 2011</span>
     </li>
     <li>
-      <a href="http://berlinbuzzwords.de/content/acid-transactions-pb-scale-marklogic-server">
+      <a href="http://writings.nunojob.com/slides/2011-bbuzz.pdf">
         Transactions at the PB Scale with MarkLogic Server</a>, <span>Berlin Buzzwords</span>, <span>Berlin</span>,
         <span>June 2011</span>
     </li>
