added dynamic language conference

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ title: Welcome!
   <h1>Talks, Articles, Etc...</h1>
   <ul class="posts">
     <li>
+      <a href="2011-dynamic-languages-conference-edinburgh-nuno-job-xquery-vs-the-world">XQuery vs. The World</a>, <span>Dynamic Languages Conference</span>, <span>Edinburgh, Scotland</span>, <span>August 2011</span>
+    </li>
+    <li>
       <a href="http://opensourcebridge.org/sessions/524">
         No More Joins</a>, <span>Open Source Bridge</span>, <span>Portland</span>,
       <span>June 2011</span>
