added dynamic language conference

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Welcome!
   <h1>Talks, Articles, Etc...</h1>
   <ul class="posts">
     <li>
-      <a href="2011-dynamic-languages-conference-edinburgh-nuno-job-xquery-vs-the-world">XQuery vs. The World</a>, <span>Dynamic Languages Conference</span>, <span>Edinburgh</span>, <span>August 2011</span>
+      <a href="http://writings.nunojob.com/slides/2011-dynamic-languages-conference-edinburgh-nuno-job-xquery-vs-the-world.pdf">XQuery vs. The World</a>, <span>Dynamic Languages Conference</span>, <span>Edinburgh</span>, <span>August 2011</span>
     </li>
     <li>
       <a href="http://opensourcebridge.org/sessions/524">
